# Cargo.toml
[package]
name = "calculator"
version = "0.1.0"
description = "Test description!"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[package.metadata.wapm]
namespace = "routerrage"  # The namespace to publish it to
abi = "none" # How to compile the crate. "none" is "wasm32-unknown-unknown"
bindings = { wai-version = "0.2.0", exports = "infisical.wai" }

[dependencies]
reqwest = {version = "0.11.22", features = ["default", "blocking", "cookies", "json", "socks"]}  
serde = {version = "1.0.193", features = ["derive"]}
tokio = {version = "1.34.0", features = ["full"]}
wai-bindgen-rust = "0.2.3"
